service TeamService {
  rpc AddTeam(Team) returns (TeamSuccess) {}
  rpc DeleteFile(Team) returns (TeamSuccess) {}
  rpc UpdateTeam(Policy) returns (TeamSuccess) {}
}

message Team {
  required int32 policy_id = 1;
}

message Policy {
  required  int32 team_id = 1;
  required int32 policy_id = 2;
}

message TeamSuccess {
  required  int32 code = 1;
}